feat: testing methonds

--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
 
           <button id="play-btn" onclick="playOnClick()">Play</button>
     </div >
+<div id="test">
 
+</div>
         <div id="container">
-           <table>
+           <table class="none">
                <tr>
                 <td></td>
                 <td></td>
