--- a/index.html
+++ b/index.html
@@ -19,11 +19,9 @@
 
           <button id="play-btn" onclick="playOnClick()">Play</button>
     </div >
-<div id="test">
 
-</div>
-        <div id="container">
-           <table class="none">
+        <div id="container" class="none">
+           <table >
                <tr>
                 <td></td>
                 <td></td>
