fix: first position of piece

--- a/index.html
+++ b/index.html
@@ -2,26 +2,24 @@
 
 <html>
 
-    <head>
-        <title>Tetris</title>
-       
-        <link rel="stylesheet" href="styles/style.css">
-    </head>
+<head>
+    <title>Tetris</title>
 
-    <body>
-        <div id="tetris">
+    <link rel="stylesheet" href="styles/style.css">
+</head>
 
-        <h1 >
+<body>
+    <div id="tetris">
+        <h1>
             Tetris
         </h1>
     </div>
     <div id="buttons">
+        <button id="play-btn" onclick="playOnClick()">Play</button>
+    </div>
+    <div id="points"></div>
+    <div id="container"></div>
+    <script src="script.js"></script>
+</body>
 
-          <button id="play-btn" onclick="playOnClick()">Play</button>
-    </div >
-        <div id="container">
-                    
-        </div>
-        <script src="script.js"></script>
-    </body>
 </html>
