feat: draw next piece

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <button id="play-btn" onclick="playOnClick()">Play</button>
     </div>
     <div id="points"></div>
+    <div id="next-piece"></div>
     <div id="container"></div>
     <script src="script.js"></script>
 </body>
