feat: design changes

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 <body>
     <div id="tetris">
         <h1>
-            Tetris
+            TETRIS
         </h1>
     </div>
     <div id="buttons">
-        <button id="play-btn" onclick="playOnClick()">Play</button>
+        <button id="play-btn" onclick="playOnClick()">PLAY</button>
     </div>
     <div id="points"></div>
     <div id="next-piece"></div>
