feat: play button design changes

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Tetris</title>
 
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="style.scss"/>
+
 </head>
 
 <body>
@@ -15,7 +17,7 @@
         </h1>
     </div>
     <div id="buttons">
-        <button id="play-btn" onclick="playOnClick()">PLAY</button>
+        <button id="play-btn" class="button" onclick="playOnClick()">PLAY</button>
     </div>
     <div id="points"></div>
     <div id="next-piece"></div>
